Proceso de cargar datos para la encuesta plantilla Cliente interno
