# routes/api.php
@@ -201,3 +201,5 @@ Route::get('/periodos/{id}', 'Periodos\ShowController');
 Route::get('/periodos/{id}/encuestas', 'Periodos\Encuestas\IndexController');
 Route::put('/periodos/{id}', 'Periodos\UpdateProcessController');
 Route::delete('/periodos/{id}', 'Periodos\DeleteProcessController');
+
+Route::post('/periodos/{id}/detalle-respuestas', 'DetalleRespuestas\ImportDataController');
